Swagger updated. Sas endpoint implemented
